--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,3 +9,4 @@ Changes in version 0.4
 * Documentation for graphical primitives
 * Styling improvements to array visualization
 * General swap effect added; swap now shows an arrow for the swapped elements
+* License changed to MIT license.
