--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,3 +15,4 @@ Changes in dev version
 ----------------------
 * Possibility to better control array styling
 * Fixed a bug in tree positioning
+* Added function isAnimating() to check whether an animation is playing
