Restore Changelog.txt -- Trying to get tags to register.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,7 +4,7 @@ For changes before version 0.3.1, see
 Changes in development version
 ------------------------------
 
-Changes in version 0.6 [December 12, 2012]
+Changes in version 0.6
 ------------------------------
 * new features:
   - support for pseudocode view
